tests/toylang/neg/001116_mutation.toylang
program a = { if a while sleep; } .
